# finchfs

./: .gitignore  .gitmodules  LICENSE  Makefile.am  README.md  configure.ac
.github/workflows/: ci.yaml
client/: Makefile.am  finchfind.c  finchmkdir  finchmkdir.c  finchrun.in  libfinchrun.c
docs/: api.rst  arch  build.rst  conf.py  index.rst  overview.rst  requirements.txt  run.rst
finchfsd/: Makefile.am  finchfsd.c  find.c  find.h  fs.h  fs_pmemkv.c  fs_posix.c  fs_server.c  hashmap.c  hashmap.h
lib/: Makefile.am  finchfs.c  finchfs.h  fs_client.c  fs_rpc.h  fs_types.h  log.c  log.h  path.c  tree.h
pkgconfig/: Makefile.am  finchfs.pc.in
tests/: finchfs_test.cc  find_test.cc  multithread_test.cc
